Fix task space wrapping and removal of empty task

--- a/todo/src/main/resources/static/styles.css
+++ b/todo/src/main/resources/static/styles.css
@@ -11,10 +11,16 @@ body {
     outline-color: #d1d1d1;
 }
 
+#taskList {
+    margin-bottom: 8%;
+    white-space: nowrap;
+}
+
 #newTaskForm {
     display: flex;
     text-align: left;
     align-items: center;
+    margin-bottom: 8%;
 }
 
 #taskDescription {
@@ -23,6 +29,7 @@ body {
     border-radius: 10px;
     width: 200px;
     font-family: "Roboto Condensed", sans-serif;
+    font-size: 20px;
     color: #2c2c2c;
 }
 
@@ -31,10 +38,8 @@ body {
     color: #fff;
     border: none;
     cursor: pointer;
-    font-size: 18px;
-    text-align: center;
-    text-decoration: none;
     margin-top: 3px;
+    scale: 110%;
 }
 
 #addTaskButton:hover {
@@ -43,7 +48,7 @@ body {
 
 
 #addTaskButton:active {
-    transform: scale(95%);
+    transform: scale(100%);
     color: #54ad51;
 }
 
@@ -77,7 +82,7 @@ body {
     gap: 4px;
     margin-left: 40px;
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .removeButton {
@@ -89,6 +94,7 @@ body {
     cursor: pointer;
     margin-top: 5px;
     margin-left: 5px;
+    width: 105%;
 }
 
 .removeButton:hover {
